# avr_bare-metal

./: README.md
atmega328p/: CMakeLists.txt  main.c  upload_code
atmega328p/Drivers/: i2c.c  i2c.h  timer.c  timer.h  uart.c  uart.h
atmega328p/libs/: SerialIO.c  SerialIO.h
